Colaboratory를 통해 생성됨

--- a/opencv_yolov4.ipynb
+++ b/opencv_yolov4.ipynb
@@ -43,14 +43,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gmqP_3PiW3la",
-        "outputId": "143fbf15-a726-46ca-f23d-cffe35848f41"
+        "outputId": "93dda017-ffb3-4e13-c45d-d3c7d217b312"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
       "id": "gmqP_3PiW3la",
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,7 +68,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-jI4ezC8XGHx",
-        "outputId": "4465731a-2d2e-4dc9-95b5-b81264992771"
+        "outputId": "36aabcd5-bfb7-4641-9e30-2f95600df880"
       },
       "source": [
         "!pwd"
@@ -94,7 +94,7 @@
         "!cp /content/drive/MyDrive/yolov4/obj.names ."
       ],
       "id": "ec6eCR11XLc3",
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
         "!cp /content/drive/MyDrive/yolov4/*.weights ."
       ],
       "id": "bqSGVCSGXtw3",
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
         "!cp /content/drive/MyDrive/yolov4/obj.names ."
       ],
       "id": "IKMK8oH7X4Em",
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -127,61 +127,120 @@
         "id": "rvStoUEoYl-q"
       },
       "source": [
-        "!cp /content/drive/MyDrive/yolov4/*.weights ."
+        "!cp /content/drive/MyDrive/yolov4/cctv5-1-10.jpg ."
       ],
       "id": "rvStoUEoYl-q",
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sVcxUpQVahTN"
+        "id": "sVcxUpQVahTN",
+        "outputId": "5c6075ce-0a33-47f3-c53a-5ffde5015921",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "!ls -l"
       ],
       "id": "sVcxUpQVahTN",
-      "execution_count": 14,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total 250964\n",
+            "-rw------- 1 root root    953924 Mar 15 05:58 cctv5-1-10.jpg\n",
+            "-rw------- 1 root root 256015980 Mar 15 05:58 custom-yolov4-detector_last.weights\n",
+            "drwx------ 5 root root      4096 Mar 15 05:58 drive\n",
+            "-rw------- 1 root root         5 Mar 15 05:58 obj.names\n",
+            "drwxr-xr-x 1 root root      4096 Mar  5 14:37 sample_data\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "OvmQ5u2xd2xo",
+        "outputId": "a2691de2-1036-4064-b8c7-96ac912a6b64",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 428
-        },
-        "id": "VPbX1Mt3azYV",
-        "outputId": "6257e975-ce56-4ccf-9dc3-466de726203e"
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!pwd"
+      ],
+      "id": "OvmQ5u2xd2xo",
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VPbX1Mt3azYV"
       },
       "source": [
         "!pip install opencv-contrib-python==3.4.13.47 --force-reinstall"
       ],
       "id": "VPbX1Mt3azYV",
-      "execution_count": 14,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iBCADSFQZ759"
+      },
+      "source": [
+        "import cv2\r\n",
+        "import numpy as np\r\n",
+        "\r\n"
+      ],
+      "id": "iBCADSFQZ759",
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CcM29asTeZ-a",
+        "outputId": "74b88fce-44ab-41a4-b483-69a051e7f8b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 292
+        }
+      },
+      "source": [
+        "!pip3 install --upgrade opencv-python==3.4.2.17"
+      ],
+      "id": "CcM29asTeZ-a",
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting opencv-contrib-python==3.4.13.47\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/b3/35/e42cde634d25ed3dc32e638993df48eea3c5513b6af3a0cdd6cc53abc4c6/opencv_contrib_python-3.4.13.47-cp37-cp37m-manylinux2014_x86_64.whl (53.7MB)\n",
-            "\u001b[K     |████████████████████████████████| 53.7MB 56kB/s \n",
-            "\u001b[?25hCollecting numpy>=1.14.5\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/70/8a/064b4077e3d793f877e3b77aa64f56fa49a4d37236a53f78ee28be009a16/numpy-1.20.1-cp37-cp37m-manylinux2010_x86_64.whl (15.3MB)\n",
-            "\u001b[K     |████████████████████████████████| 15.3MB 220kB/s \n",
-            "\u001b[31mERROR: tensorflow 2.4.1 has requirement numpy~=1.19.2, but you'll have numpy 1.20.1 which is incompatible.\u001b[0m\n",
-            "\u001b[31mERROR: jaxlib 0.1.60+cuda110 has requirement numpy<1.20,>=1.12, but you'll have numpy 1.20.1 which is incompatible.\u001b[0m\n",
-            "\u001b[31mERROR: datascience 0.10.6 has requirement folium==0.2.1, but you'll have folium 0.8.3 which is incompatible.\u001b[0m\n",
+            "Collecting opencv-python==3.4.2.17\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/8f/8f/a5d2fa3a3309c4e4aa28eb989d81a95b57c63406b4d439758a1a0a810c77/opencv_python-3.4.2.17-cp37-cp37m-manylinux1_x86_64.whl (25.0MB)\n",
+            "\u001b[K     |████████████████████████████████| 25.0MB 131kB/s \n",
+            "\u001b[?25hRequirement already satisfied, skipping upgrade: numpy>=1.14.5 in /usr/local/lib/python3.7/dist-packages (from opencv-python==3.4.2.17) (1.20.1)\n",
             "\u001b[31mERROR: albumentations 0.1.12 has requirement imgaug<0.2.7,>=0.2.5, but you'll have imgaug 0.2.9 which is incompatible.\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: numpy, opencv-contrib-python\n",
-            "  Found existing installation: numpy 1.19.5\n",
-            "    Uninstalling numpy-1.19.5:\n",
-            "      Successfully uninstalled numpy-1.19.5\n",
-            "  Found existing installation: opencv-contrib-python 4.1.2.30\n",
-            "    Uninstalling opencv-contrib-python-4.1.2.30:\n",
-            "      Successfully uninstalled opencv-contrib-python-4.1.2.30\n",
-            "Successfully installed numpy-1.20.1 opencv-contrib-python-3.4.13.47\n"
+            "Installing collected packages: opencv-python\n",
+            "  Found existing installation: opencv-python 4.1.2.30\n",
+            "    Uninstalling opencv-python-4.1.2.30:\n",
+            "      Successfully uninstalled opencv-python-4.1.2.30\n",
+            "Successfully installed opencv-python-3.4.2.17\n"
           ],
           "name": "stdout"
         },
@@ -191,8 +250,7 @@
             "application/vnd.colab-display-data+json": {
               "pip_warning": {
                 "packages": [
-                  "cv2",
-                  "numpy"
+                  "cv2"
                 ]
               }
             }
@@ -206,22 +264,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 214
-        },
-        "id": "iBCADSFQZ759",
-        "outputId": "b1711cb5-f09c-43d6-e51d-5af3ff3d3b6c"
+        "id": "aIKNpqcjc7HE"
       },
       "source": [
-        "#import cv2\r\n",
-        "#import numpy as np\r\n",
-        "\r\n",
-        "# Load Yolo\r\n",
-        "net = cv2.dnn.readNet(\"custom-yolov4-detector_last.weights\", \"custom-yolov4-detector.cfg\")"
+        "_net_cfg_path = \"/content/custom-yolov4-detector.cfg\"\r\n",
+        "_net_weights_path = \"/content/custom-yolov4-detector_last.weights\"\r\n",
+        "#_net_min_confidence = 0.02\r\n",
+        "#_net_class_names_path = \"/home/dgk/Documents/HunterCV/pyway/cfg/coco.names\"\r\n"
       ],
-      "id": "iBCADSFQZ759",
-      "execution_count": 13,
+      "id": "aIKNpqcjc7HE",
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SSheEcw7cP2h",
+        "outputId": "61651b32-f172-4b6f-f923-7e519bbcfc76",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        }
+      },
+      "source": [
+        "# Load Yolo\r\n",
+        "net = cv2.dnn.readNet(_net_weights_path, _net_cfg_path)"
+      ],
+      "id": "SSheEcw7cP2h",
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "error",
@@ -230,8 +300,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-20ab336e1f69>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Load Yolo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mnet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadNet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"custom-yolov4-detector_last.weights\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"custom-yolov4-detector.cfg\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31merror\u001b[0m: OpenCV(4.1.2) /io/opencv/modules/dnn/src/darknet/darknet_io.cpp:554: error: (-212:Parsing error) Unsupported activation: mish in function 'ReadDarknetFromCfgStream'\n"
+            "\u001b[0;32m<ipython-input-15-eb467eb357da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Load Yolo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mnet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadNet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_net_weights_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_net_cfg_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31merror\u001b[0m: OpenCV(3.4.13) /tmp/pip-req-build-747w3gn5/opencv/modules/dnn/src/darknet/darknet_importer.cpp:207: error: (-212:Parsing error) Failed to parse NetParameter file: /content/custom-yolov4-detector.cfg in function 'readNetFromDarknet'\n"
           ]
         }
       ]
@@ -302,7 +372,7 @@
         "print(indexes)\r\n"
       ],
       "id": "R6YvrVvZYoXf",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
